--- a/pom.xml
+++ b/pom.xml
@@ -10,10 +10,13 @@
 
     <modules>
         <module>auth</module>
+        <module>Eureka</module>
+        <module>eureka</module>
     </modules>
 
     <properties>
-        <spring.version>3.1.5</spring.version>
+        <spring.version>3.3.6</spring.version>
+        <spring.cloud.verson>2023.0.3</spring.cloud.verson>
     </properties>
 
     <dependencyManagement>
@@ -22,6 +25,13 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-dependencies</artifactId>
                 <version>${spring.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>${spring.cloud.verson}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
