--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.example</groupId>
+    <groupId>mrtn.influ</groupId>
     <artifactId>influ-backend</artifactId>
     <version>0.1.0</version>
     <packaging>pom</packaging>
@@ -12,6 +12,7 @@
         <module>auth</module>
         <module>Eureka</module>
         <module>eureka</module>
+        <module>gateway</module>
     </modules>
 
     <properties>
