--- a/auth-service/src/main/resources/application.yaml
+++ b/auth-service/src/main/resources/application.yaml
@@ -4,11 +4,13 @@ server:
 spring:
   application:
     name: auth-service
+  h2:
+    console.enabled: true
   datasource:
-    url: jdbc:h2:mem:testdb
+    url: jdbc:h2:mem:mydb
     username: sa
-    password: password
-    driver-class-name: org.h2.Driver
+    password:
+    driverClassName: org.h2.Driver
   jpa:
     hibernate:
       ddl-auto: update
