--- a/gateway-application/src/main/resources/application.yaml
+++ b/gateway-application/src/main/resources/application.yaml
@@ -4,6 +4,16 @@ server:
 spring:
   application:
     name: api-gateway
+  cloud:
+    gateway:
+      globalcors:
+        corsConfigurations:
+          '[/**]':
+            allowedOrigins: "http://localhost:4200"
+            allowedMethods:
+              - GET
+              - POST
+            allowedHeaders: "*"
 
 eureka:
   client:
