Get Campaign from DB with id and for a certain user

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>testService</module>
         <module>gateway-application</module>
         <module>auth-service</module>
+        <module>campaign-service</module>
     </modules>
 
     <properties>
