--- a/auth-service/src/main/resources/application.properties
+++ b/auth-service/src/main/resources/application.properties
@@ -7,3 +7,9 @@ spring.h2.console.path=/h2-console
 
 # Disable CSRF protection for H2 console
 spring.security.csrf.enabled=false
+
+# Transaction management logging to trace
+logging.level.org.springframework.transaction.interceptor=TRACE
+
+# Request response logging to debug
+logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
