--- a/user-service/pom.xml
+++ b/user-service/pom.xml
@@ -11,6 +11,7 @@
 
     <groupId>mrtn.influ.user</groupId>
     <artifactId>user-service</artifactId>
+    <version>0.0.1</version>
 
     <properties>
         <java.version>17</java.version>
@@ -21,6 +22,12 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>mrtn.influ.user</groupId>
+            <artifactId>user-service-api</artifactId>
+            <version>0.0.1</version>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -38,38 +45,6 @@
             <artifactId>h2</artifactId>
             <scope>runtime</scope>
         </dependency>
-
-        <!-- Swagger dependencies -->
-        <dependency>
-            <groupId>org.openapitools</groupId>
-            <artifactId>jackson-databind-nullable</artifactId>
-            <version>0.2.6</version>
-        </dependency>
-        <dependency>
-            <groupId>jakarta.validation</groupId>
-            <artifactId>jakarta.validation-api</artifactId>
-            <version>3.0.2</version>
-        </dependency>
-        <dependency>
-            <groupId>jakarta.annotation</groupId>
-            <artifactId>jakarta.annotation-api</artifactId>
-            <version>3.0.0</version>
-        </dependency>
-        <dependency>
-            <groupId>org.hibernate.validator</groupId>
-            <artifactId>hibernate-validator</artifactId>
-            <version>8.0.1.Final</version>
-        </dependency>
-        <dependency>
-            <groupId>io.swagger.parser.v3</groupId>
-            <artifactId>swagger-parser</artifactId>
-            <version>2.1.30</version>
-        </dependency>
-        <dependency>
-            <groupId>io.swagger.core.v3</groupId>
-            <artifactId>swagger-annotations-jakarta</artifactId>
-            <version>2.2.31</version>
-        </dependency>
     </dependencies>
 
     <build>
@@ -77,36 +52,6 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-            <plugin>
-                <groupId>org.openapitools</groupId>
-                <artifactId>openapi-generator-maven-plugin</artifactId>
-                <version>7.12.0</version>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>generate</goal>
-                        </goals>
-                        <configuration>
-                            <inputSpec>file:///C:/projects/influ-backend/user-service/src/main/resources/openapi.yaml</inputSpec>
-                            <generatorName>spring</generatorName>
-                            <configOptions>
-                                <annotationLibrary>swagger2</annotationLibrary>
-                                <library>spring-boot</library>
-                                <useSpringBoot3>true</useSpringBoot3>
-                                <useJakartaEe>true</useJakartaEe>
-                                <interfaceOnly>true</interfaceOnly>
-                                <useTags>true</useTags>
-                                <useSpringController>true</useSpringController>
-                                <apiPackage>mrtn.influ.userservice.endpoint</apiPackage>
-                                <modelPackage>mrtn.influ.userservice.dto</modelPackage>
-                                <useSpringBuiltInValidation>true</useSpringBuiltInValidation>
-                                <generateBuilders>true</generateBuilders>
-                                <!-- <performBeanValidation>true</performBeanValidation> -->
-                            </configOptions>
-                        </configuration>
-                    </execution>
-                </executions>
             </plugin>
         </plugins>
     </build>
