--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>auth-service</module>
         <module>campaign-service</module>
         <module>user-service</module>
+        <module>user-service-api</module>
     </modules>
 
     <properties>
