Gateway path fixes

--- a/auth-service/src/main/resources/application-local.properties
+++ b/auth-service/src/main/resources/application-local.properties
@@ -1,4 +1,8 @@
-user.service.url=http://localhost:8084
+spring.config.activate.on-profile=local
+
+spring.cloud.loadbalancer.enabled=false
+
+user-service.base-url=http://localhost:8084
 
 # Disable default login page
 spring.security.form-login.enabled=false
@@ -11,7 +15,7 @@ spring.h2.console.path=/h2-console
 spring.security.csrf.enabled=false
 
 # Transaction management logging to trace
-logging.level.org.springframework.transaction.interceptor=TRACE
+logging.level.org.springframework.transaction.interceptor=OFF
 
 # Request response logging to debug
-logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
+logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=OFF
