--- a/auth-service/src/main/resources/application.yaml
+++ b/auth-service/src/main/resources/application.yaml
@@ -1,3 +1,4 @@
+# Framework properties
 server:
   port: 8082
 
@@ -22,11 +23,12 @@ eureka:
     serviceUrl:
       defaultZone: ${EUREKA_URI:http://localhost:8761/eureka}
 
-jwt:
-  secret: mySecretKey
-
 management:
   endpoints:
     web:
       exposure:
-        include: health,info,beans
+        include: health,info
+
+# Application properties
+jwt:
+  secret: mySecretKey
