--- a/gateway-application/src/main/resources/application.properties
+++ b/gateway-application/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-auth.service.verify.endpoint=http://localhost:8082/auth/verify
+auth.service.verify.endpoint=http://auth-service/api/v1/auth/verify
 
 # Request response logging to debug
 logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=INFO
