--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>campaign-service</module>
         <module>user-service</module>
         <module>user-service-api</module>
+        <module>campaign-service-api</module>
     </modules>
 
     <properties>
