--- a/campaign-service/pom.xml
+++ b/campaign-service/pom.xml
@@ -19,6 +19,12 @@
 
     <dependencies>
         <dependency>
+            <groupId>mrtn.influ.campaign</groupId>
+            <artifactId>campaign-service-api</artifactId>
+            <version>0.0.1</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
