--- a/campaign-service/src/main/resources/application-gateway.properties
+++ b/campaign-service/src/main/resources/application-gateway.properties
@@ -1,3 +1,5 @@
+spring.config.activate.on-profile=gateway
+
 # Enable H2 console
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
