--- a/campaign-service/src/main/resources/application-local.properties
+++ b/campaign-service/src/main/resources/application-local.properties
@@ -2,6 +2,16 @@ spring.config.activate.on-profile=local
 
 spring.cloud.loadbalancer.enabled=false
 
-# Enable H2 console
+datasource.url=jdbc:h2:mem:mydb
+datasource.username=sa
+datasource.password=
+datasource.driverClassName=org.h2.Driver
+
+jpa.hibernate.ddl-auto=update
+jpa.show-sql=true
+jpa.database-platform=org.hibernate.dialect.H2Dialect
+
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+
+eureka.client.serviceUrl.defaultZone=${EUREKA_URI:http://localhost:8761/eureka}
