--- a/campaign-service-api/pom.xml
+++ b/campaign-service-api/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>mrtn.influ</groupId>
         <artifactId>influ-backend</artifactId>
-        <version>0.1.0</version>
+        <version>0.0.1</version>
     </parent>
 
     <groupId>mrtn.influ.campaign</groupId>
@@ -66,7 +66,7 @@
                             <goal>generate</goal>
                         </goals>
                         <configuration>
-                            <inputSpec>src/main/resources/openapi.yaml</inputSpec>
+                            <inputSpec>C:/projects/influ-backend/campaign-service-api/src/main/resources/openapi.yaml</inputSpec>
                             <generatorName>spring</generatorName>
                             <configOptions>
                                 <annotationLibrary>swagger2</annotationLibrary>
