--- a/campaign-service/pom.xml
+++ b/campaign-service/pom.xml
@@ -6,10 +6,12 @@
     <parent>
         <groupId>mrtn.influ</groupId>
         <artifactId>influ-backend</artifactId>
-        <version>0.1.0</version>
+        <version>0.0.1</version>
     </parent>
 
+    <groupId>mrtn.influ.campaign</groupId>
     <artifactId>campaign-service</artifactId>
+    <version>0.0.1</version>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
