--- a/eureka-service/pom.xml
+++ b/eureka-service/pom.xml
@@ -6,10 +6,12 @@
     <parent>
         <groupId>mrtn.influ</groupId>
         <artifactId>influ-backend</artifactId>
-        <version>0.1.0</version>
+        <version>0.0.1</version>
     </parent>
 
-    <artifactId>testService</artifactId>
+    <groupId>mrtn.influ.eureka</groupId>
+    <artifactId>eureka-service</artifactId>
+    <version>0.0.1</version>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
@@ -23,17 +25,9 @@
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-        <dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+            <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>org.springframework.boot</groupId>-->
-<!--            <artifactId>spring-boot-starter-actuator</artifactId>-->
-<!--        </dependency>-->
     </dependencies>
 
 </project>
