--- a/gateway-service/src/main/resources/application-gateway.yaml
+++ b/gateway-service/src/main/resources/application-gateway.yaml
@@ -21,3 +21,8 @@ eureka:
   client:
     serviceUrl:
       defaultZone: ${EUREKA_URI:http://localhost:8761/eureka}
+
+auth.service.verify.endpoint: http://auth-service/api/v1/auth/verify
+
+# Request response logging to debug
+logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter: INFO
