--- a/pom.xml
+++ b/pom.xml
@@ -5,13 +5,12 @@
 
     <groupId>mrtn.influ</groupId>
     <artifactId>influ-backend</artifactId>
-    <version>0.1.0</version>
+    <version>0.0.1</version>
     <packaging>pom</packaging>
 
     <modules>
-        <module>eureka</module>
-        <module>testService</module>
-        <module>gateway-application</module>
+        <module>eureka-service</module>
+        <module>gateway-service</module>
         <module>auth-service</module>
         <module>campaign-service</module>
         <module>user-service</module>
@@ -80,6 +79,18 @@
                     <groupId>org.springframework.boot</groupId>
                     <artifactId>spring-boot-maven-plugin</artifactId>
                     <version>${spring.version}</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-maven-plugin</artifactId>
+                    <version>${spring.version}</version>
+                    <executions>
+                        <execution>
+                            <goals>
+                                <goal>build-image</goal>
+                            </goals>
+                        </execution>
+                    </executions>
                 </plugin>
             </plugins>
         </pluginManagement>
