Added docker compose properties and fixed issues with docker configs and paths

--- a/auth-service/pom.xml
+++ b/auth-service/pom.xml
@@ -21,6 +21,12 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.7.3</version>
+        </dependency>
+
+        <dependency>
             <groupId>mrtn.influ.auth</groupId>
             <artifactId>auth-service-api</artifactId>
             <version>0.0.1</version>
