--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,17 @@
-version: '3.9'
-
 services:
+  pgadmin:
+    image: dpage/pgadmin4
+    container_name: pgadmin
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@local.dev
+      PGADMIN_DEFAULT_PASSWORD: admin
+    ports:
+      - "5050:80"
+    depends_on:
+      - postgres
+    networks:
+      - backend
+
   postgres:
     image: postgres:15
     container_name: postgres
@@ -16,7 +27,7 @@ services:
       - backend
 
   eureka:
-    image: mrtn/influ/eureka
+    image: eureka-service:0.0.1
     container_name: eureka
     ports:
       - "8761:8761"
@@ -26,10 +37,10 @@ services:
       - backend
 
   gateway:
-    image: mrtn/influ/gateway-service
+    image: gateway-service:0.0.1
     container_name: gateway
     ports:
-      - "8080:8080"
+      - "8081:8081"
     environment:
       - SPRING_PROFILES_ACTIVE=docker
     depends_on:
@@ -39,23 +50,24 @@ services:
       - backend
 
   auth:
-    image: mrtn/influ/auth-service
+    image: auth-service:0.0.1
     container_name: auth
     ports:
-      - "8081:8081"
+      - "8082:8082"
     environment:
       - SPRING_PROFILES_ACTIVE=docker
     depends_on:
       - eureka
       - user
+      - postgres
     networks:
       - backend
 
   user:
-    image: mrtn/influ/user-service
+    image: user-service:0.0.1
     container_name: user
     ports:
-      - "8082:8082"
+      - "8084:8084"
     environment:
       - SPRING_PROFILES_ACTIVE=docker
     depends_on:
@@ -65,7 +77,7 @@ services:
       - backend
 
   campaign:
-    image: mrtn/influ/campaign-service
+    image: campaign-service:0.0.1
     container_name: campaign
     ports:
       - "8083:8083"
