--- a/user-service/pom.xml
+++ b/user-service/pom.xml
@@ -23,6 +23,12 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.7.3</version>
+        </dependency>
+
+        <dependency>
             <groupId>mrtn.influ.user</groupId>
             <artifactId>user-service-api</artifactId>
             <version>0.0.1</version>
