Added keycloak jwt validation to gateway, works started in local

--- a/gateway-service/pom.xml
+++ b/gateway-service/pom.xml
@@ -21,19 +21,6 @@
 
     <dependencies>
         <dependency>
-            <groupId>mrtn.influ.auth</groupId>
-            <artifactId>auth-service-api</artifactId>
-            <version>0.0.1</version>
-            <exclusions>
-                <!-- Need to exclude because conflict with spring cloud and webflux -->
-                <exclusion>
-                    <groupId>org.springframework.boot</groupId>
-                    <artifactId>spring-boot-starter-web</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-
-        <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
@@ -48,6 +35,10 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
         </dependency>
         <dependency>
             <groupId>org.apache.tomcat.embed</groupId>
