--- a/gateway-service/src/main/resources/application-gateway.yaml
+++ b/gateway-service/src/main/resources/application-gateway.yaml
@@ -16,13 +16,16 @@ spring:
               - DELETE
               - PUT
             allowedHeaders: "*"
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: http://localhost:8100/auth/realms/influ-realm
 
 eureka:
   client:
     serviceUrl:
       defaultZone: ${EUREKA_URI:http://localhost:8761/eureka}
-
-auth.service.verify.endpoint: http://auth-service/api/v1/auth/verify
 
 # Request response logging to debug
 logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter: INFO
