--- a/eureka-service/pom.xml
+++ b/eureka-service/pom.xml
@@ -35,6 +35,22 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <image>
+                        <!-- name and tag -->
+                        <name>eureka-service:latest</name>
+                        <!-- Pin the builder image version -->
+                        <builder>paketobuildpacks/builder-jammy-base:0.4.502</builder>
+                        <!-- Ensure it does NOT pull new versions -->
+                        <pullPolicy>IF_NOT_PRESENT</pullPolicy>
+                        <!-- Optional but recommended: pin the run image -->
+                        <runImage>paketobuildpacks/run-jammy-base:latest</runImage>
+                    </image>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
             </plugin>
         </plugins>
     </build>
