--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,6 @@
     <modules>
         <module>eureka-service</module>
         <module>gateway-service</module>
-        <module>auth-service</module>
-        <module>auth-service-api</module>
         <module>campaign-service</module>
         <module>user-service</module>
         <module>user-service-api</module>
@@ -80,11 +78,6 @@
                     <groupId>org.springframework.boot</groupId>
                     <artifactId>spring-boot-maven-plugin</artifactId>
                     <version>${spring.version}</version>
-                </plugin>
-                <plugin>
-                    <groupId>org.springframework.boot</groupId>
-                    <artifactId>spring-boot-maven-plugin</artifactId>
-                    <version>${spring.version}</version>
                     <executions>
                         <execution>
                             <goals>
@@ -92,14 +85,27 @@
                             </goals>
                         </execution>
                     </executions>
-                    <!-- TODO  Itt ezt valahogy jól beállítani, mert lezsedegeti a latest imaget és az mobil netről fájós -->
-                    <configuration>
-                        <image>
-                            <builder>paketobuildpacks/builder:base</builder>
-                            <!-- Optional: pin run-image too -->
-                            <runImage>paketobuildpacks/run:base-cnb</runImage>
-                        </image>
-                    </configuration>
+                </plugin>
+                <!-- Clean prune images -->
+                <plugin>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>exec-maven-plugin</artifactId>
+                    <version>3.1.0</version>
+                    <executions>
+                        <execution>
+                            <id>cleanup-dangling-images</id>
+                            <phase>package</phase>
+                            <goals><goal>exec</goal></goals>
+                            <configuration>
+                                <executable>docker</executable>
+                                <arguments>
+                                    <argument>image</argument>
+                                    <argument>prune</argument>
+                                    <argument>-f</argument>
+                                </arguments>
+                            </configuration>
+                        </execution>
+                    </executions>
                 </plugin>
             </plugins>
         </pluginManagement>
