--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
         <module>user-service</module>
         <module>user-service-api</module>
         <module>campaign-service-api</module>
+        <module>chat-service</module>
+        <module>chat-service-api</module>
     </modules>
 
     <properties>
